hphp/hack/test/typecheck/genva_allows_awaiting_on_multiple_awaitables.php.exp
File "genva_allows_awaiting_on_multiple_awaitables.php", line 15, characters 28-32:
Unbound name: genva (a global function) (Naming[2049])
